9/29/22
	Added support for parity count lines.
	Added support for reverse numbered rooms, and support for negative indices in numbered room clues
	Fixed error in digit treatment for cellTransformSudoku...digit set should be list of base + transformed digits, not just base digits.
	Added test cases.

9/26/22
	Added superposition Schrödinger cell class and some constraints.
	Added support for reverse X-sums (originated by kuraban, thanks to Qodec's recent puzzle for the inspiration!)
	Added support for negative indexing in X-Sums (reverse the side from which sums are taken, a la Python array indexing)

9/23/22
	Implemented support for Schrödinger cell puzzles. Not all constraints are supported, but many of the constraints used in puzzles to date are
	Added test case
	
9/20/22bis
	Implemented code to list candidates for a given cell, or for the entire grid, for 9x9 grids. Produces a list of excluded values which can be pasted into code as hints to speed the candidate search.
	Added test case.

9/20/22
	Re-factored indexing code to fix bug introduced with previous "fix" for Broken 159
	Added support for vaults
	Added additional test cases

9/19/22
	Added test cases
	Added support for Digit Count Cages (thanks clover!)
	Fixed 1-off error in setGlobalEntropy introduced when input was migrated from 0-base to 1-base
	Added test mode to countSolutions method to run tests on partial puzzles with multiple solutions

9/18/22
	Added some debug code to try to troubleshoot weird Broken 159 error in finding all solutions. (Repeatedly reports same solution.)
	Generalized doubler code to accomodate variants, including arbitrary affine transformations (ax+b) and double-or-nothing rules. New framework allows additional generalizations.
	Added new test cases

9/17/22bis
	Added test cases
	Added aliases for EvenOdd (to OddEven) and MinMax (to MaxMin) so that both directions should work seemlessly
	Added Isotopes support per request from rockratzero

9/17/22